crates/roomrs/tests/ui/fail/entity_duplicate_pk.stderr
error: #[pk] 필드는 최대 1개만 허용됩니다 (복합 PK는 후속 지원)
 --> tests/ui/fail/entity_duplicate_pk.rs:5:8
  |
5 | struct Pair {
  |        ^^^^
